Styling fix for sidebar + Text wrap in code block

--- a/src/styles/components/Documentation.scss
+++ b/src/styles/components/Documentation.scss
@@ -14,6 +14,9 @@
       .parent-list {
         position: sticky;
         top: 1rem;
+        overflow:auto;
+        max-height:100vh;
+        padding-bottom:50px;
       }
     }
   }
@@ -176,6 +179,7 @@
     }
     span {
       background-color: unset !important;
+      text-wrap: wrap;
     }
 
     code {
